# ChangeLog for dev-java/blackdown-java3d-bin
# Copyright 2000-2005 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-java/blackdown-java3d-bin/Attic/ChangeLog,v 1.4 2005/01/01 18:10:10 eradicator Exp $

  05 Sep 2004; Sven Wegener <swegener@gentoo.org> :
  Fixed ChangeLog header.

  30 Aug 2004; Chris Aniszczyk <zx@gentoo.org>
  blackdown-java3d-bin-1.3.1.ebuild:
  Marking x86

*blackdown-java3d-bin-1.3.1 (30 Jul 2004)

  30 Jul 2004; Thomas Matthijs <axxo@gentoo.org> +metadata.xml,
  +blackdown-java3d-bin-1.3.1.ebuild:
  move dev-java/blackdown-java3d dev-java/blackdown-java3d-bin

  11 Jun 2004; Danny van Dyk <kugelfang@gentoo.org>
  blackdown-java3d-1.3.1.ebuild:
  Fixing BUG #53525, added arch-specific SRC_URI.

  13 Apr 2004; Jason Wever <weeve@gentoo.org> blackdown-java3d-1.3.1.ebuild:
  Masked on sparc, no clue why it ever had a ~sparc keyword when no sparc binary
  is available.

  03 Apr 2004; Chris Aniszczyk <zx@gentoo.org> blackdown-java3d-1.3.1.ebuild:
  Added java-config as a dep. Closes #46710

*blackdown-java3d-1.3.1 (23 Feb 2004)

  23 Feb 2004; Chris Aniszczyk <zx@gentoo.org> blackdown-java3d-1.3.1.ebuild:
  Version bump.
  Fixes Bugs #42338 & #43240

*blackdown-java3d-1.3.1_beta (20 Feb 2004)

  20 Feb 2004; <zx@gentoo.org> blackdown-java3d-1.3.1_beta.ebuild:
  Initial Import. Thanks to Florian Loitsch <f.loitsch@wootsoft.com> for the
  initial ebuild. Bug #31429
