@@ -1,6 +1,12 @@
 # ChangeLog for dev-java/blackdown-java3d-bin
 # Copyright 2000-2005 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-java/blackdown-java3d-bin/Attic/ChangeLog,v 1.4 2005/01/01 18:10:10 eradicator Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-java/blackdown-java3d-bin/Attic/ChangeLog,v 1.5 2005/04/02 10:01:13 axxo Exp $
+
+*blackdown-java3d-bin-1.3.1-r1 (02 Apr 2005)
+
+  02 Apr 2005; Thomas Matthijs <axxo@gentoo.org>
+  -blackdown-java3d-bin-1.3.1.ebuild, +blackdown-java3d-bin-1.3.1-r1.ebuild:
+  don't install into current jdk
 
   05 Sep 2004; Sven Wegener <swegener@gentoo.org> :
   Fixed ChangeLog header.
